everything that was here

--- a/.envrc
+++ b/.envrc
@@ -1,8 +1,2 @@
-#if ! [ -d .direnv/virtualenv ]; then
-#  virtualenv --no-site-packages --distribute .direnv/virtualenv
-#  virtualenv --relocatable .direnv/virtualenv
-#  pip install --user -r ~/pebble-dev/PebbleSDK-2.0-BETA7/requirements.txt
-#fi
-#source .direnv/virtualenv/bin/activate
 layout python
-PATH_add /home/halkeye/pebble-dev/PebbleSDK-2.0-BETA7/bin
+PATH_add ~/pebble-dev/PebbleSDK-2.0/bin
