--- a/appinfo.json
+++ b/appinfo.json
@@ -4,14 +4,25 @@
   "longName": "pebble-8ball",
   "companyName": "Kode Koan",
   "versionCode": 1,
-  "versionLabel": "1.0.0",
+  "versionLabel": "1.0.1",
   "watchapp": {
     "watchface": false
   },
   "appKeys": {
-    "dummy": 0
   },
   "resources": {
-    "media": []
+    "media": [
+      {
+        "type": "png",
+        "menuIcon": true,
+        "name": "IMAGE_MENU_ICON",
+        "file": "icon.png"
+      },
+      {
+        "type": "png",
+        "name": "IMAGE_BACKGROUND",
+        "file": "background.png"
+      }
+    ]
   }
 }
